<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_product"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginRight="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginRight="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cost"
        android:inputType="number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/quantity"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="+"
            android:id="@+id/increment"
            android:layout_marginBottom="20dp"
            android:onClick="Increment"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="0"
            android:id="@+id/quantity_set"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="-"
            android:id="@+id/decrement"
            android:onClick="Decrement"/>
    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/select_image"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Gallery"
            android:text="@string/gallery"/>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/Image"/>
</LinearLayout>
</ScrollView>